--- a/public/catalog.html
+++ b/public/catalog.html
@@ -2102,7 +2102,7 @@
           <div
             class="filters hidden lg:block lg:max-w-[15.9375rem] w-full fixed lg:static inset-0 z-10 bg-[#020202]/20 lg:bg-transparent overflow-y-auto">
             <div
-              class="fade-left filter-content block max-w-80 w-full h-full lg:h-max bg-white text-[#2E2E2E] lg:rounded-md px-4 pt-4 pb-4 lg:pb-6">
+              class="fade-left filter-content block max-w-80 w-full min-h-screen lg:h-max bg-white text-[#2E2E2E] lg:rounded-md px-4 pt-4 pb-4 lg:pb-6">
               <div class="lg:hidden flex items-center justify-between">
                 <h3>Фильтры</h3>
                 <!-- Exit Btn -->
@@ -2113,7 +2113,7 @@
                   </svg>                  
                 </button>
               </div>
-              <div class="h-[25rem] overflow-y-auto card-scroll -mr-2 pr-2 mt-8 lg:mt-0">
+              <div class="h-[calc(100vh-200px)] overflow-y-auto card-scroll -mr-2 pr-2 mt-8 lg:mt-0">
                 <!-- Filter 1 -->
                 <div class="accordion-item">
                   <button class="accordion-button w-full flex items-center justify-between rounded-md pb-2">
