--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
         <div class="md:relative flex items-center justify-between gap-2 px-5 py-3 lg:py-4">
           <!-- Logo -->
           <a class="lg:w-full lg:max-w-[14.9375rem] shrink-0" href="./index.html">
-            <img class="h-5 md:h-6 lg:h-8" src="./img/icon-logo.svg" alt="Tea House">
+            <img class="h-15 md:h-6 lg:h-8" src="./img/icon-logo.svg" alt="Tea House">
           </a>
           <!-- Search -->
           <div class="input-group hidden lg:block relative top-0 w-full md:max-w-[35.25rem] h-6 md:h-[2.8125rem]">
@@ -877,7 +877,7 @@
             </button>
             <!-- Korzinka -->
             <button
-              class="product-modalBtn shrink-0 text-brand-black-400 transition duration-200 hover:text-brand-green-400">
+              class="product-modalBtnMobile shrink-0 text-brand-black-400 transition duration-200 hover:text-brand-green-400">
               <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M0.882559 0H2.57413C3.43217 0.0520833 4.04506 0.46875 4.41279 1.25H19.5266C20.0169 1.27604 20.4092 1.48438 20.7034 1.875C20.973 2.26562 21.0588 2.70833 20.9608 3.20312L19.4531 9.17969C19.2815 9.80469 18.9628 10.2995 18.497 10.6641C18.0312 11.0547 17.4918 11.25 16.8789 11.25H6.28823L6.4721 12.3828C6.59468 12.8516 6.88886 13.099 7.35466 13.125H17.9454C18.4847 13.1771 18.7789 13.4896 18.8279 14.0625C18.7789 14.6354 18.4847 14.9479 17.9454 15H7.35466C6.69274 15 6.12888 14.7917 5.66309 14.375C5.17278 13.9323 4.86633 13.3854 4.74375 12.7344L2.83154 2.14844C2.80703 1.96615 2.72122 1.875 2.57413 1.875H0.882559C0.343217 1.82292 0.0490311 1.51042 0 0.9375C0.0490311 0.364583 0.343217 0.0520833 0.882559 0ZM4.8173 3.125L5.95727 9.375H16.8789C17.3202 9.34896 17.6021 9.11458 17.7247 8.67188L19.1589 3.125H4.8173ZM6.4721 20C5.81018 19.974 5.29535 19.6615 4.92762 19.0625C4.63343 18.4375 4.63343 17.8125 4.92762 17.1875C5.29535 16.5885 5.81018 16.276 6.4721 16.25C7.13402 16.276 7.64884 16.5885 8.01658 17.1875C8.31076 17.8125 8.31076 18.4375 8.01658 19.0625C7.64884 19.6615 7.13402 19.974 6.4721 20ZM18.8279 18.125C18.8034 18.8281 18.5092 19.375 17.9454 19.7656C17.357 20.0781 16.7686 20.0781 16.1802 19.7656C15.6164 19.375 15.3222 18.8281 15.2977 18.125C15.3222 17.4219 15.6164 16.875 16.1802 16.4844C16.7686 16.1719 17.357 16.1719 17.9454 16.4844C18.5092 16.875 18.8034 17.4219 18.8279 18.125Z"
@@ -886,7 +886,7 @@
             </button>
             <!-- Login -->
             <button
-              class="login-btn shrink-0 text-brand-black-400 transition duration-200 hover:text-brand-green-400">
+              class="login-btnMobile shrink-0 text-brand-black-400 transition duration-200 hover:text-brand-green-400">
               <svg width="17" height="20" viewBox="0 0 17 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M11.5357 5C11.5104 3.82812 11.0045 2.92969 10.0179 2.30469C9.00595 1.73177 7.99405 1.73177 6.98214 2.30469C5.99554 2.92969 5.48958 3.82812 5.46429 5C5.48958 6.17188 5.99554 7.07031 6.98214 7.69531C7.99405 8.26823 9.00595 8.26823 10.0179 7.69531C11.0045 7.07031 11.5104 6.17188 11.5357 5ZM3.64286 5C3.64286 4.08854 3.85789 3.25521 4.28795 2.5C4.71801 1.74479 5.3125 1.13281 6.07143 0.664062C6.83036 0.221354 7.63988 0 8.5 0C9.36012 0 10.1696 0.221354 10.9286 0.664062C11.6875 1.13281 12.282 1.74479 12.7121 2.5C13.1421 3.25521 13.3571 4.08854 13.3571 5C13.3571 5.91146 13.1421 6.74479 12.7121 7.5C12.282 8.25521 11.6875 8.86719 10.9286 9.33594C10.1696 9.77865 9.36012 10 8.5 10C7.63988 10 6.83036 9.77865 6.07143 9.33594C5.3125 8.86719 4.71801 8.25521 4.28795 7.5C3.85789 6.74479 3.64286 5.91146 3.64286 5ZM1.85938 18.125H15.1406C14.9382 16.849 14.3943 15.8073 13.5089 15C12.5982 14.1927 11.5104 13.776 10.2455 13.75H6.75446C5.48958 13.776 4.41443 14.1927 3.52902 15C2.6183 15.8073 2.06176 16.849 1.85938 18.125ZM0 18.8281C0.0505952 16.875 0.708333 15.2344 1.97321 13.9062C3.26339 12.6042 4.85714 11.9271 6.75446 11.875H10.2455C12.1429 11.9271 13.7366 12.6042 15.0268 13.9062C16.2917 15.2344 16.9494 16.875 17 18.8281C17 19.1667 16.8862 19.4401 16.6585 19.6484C16.4561 19.8828 16.1905 20 15.8616 20H1.13839C0.809524 20 0.543899 19.8828 0.341518 19.6484C0.113839 19.4401 0 19.1667 0 18.8281Z"
@@ -1285,10 +1285,13 @@
           <div class="login-modal hidden fixed inset-0 z-30 w-full min-h-full overflow-y-auto bg-[#020202]/20 p-4">
             <div class="login-container w-full max-w-350 relative mx-auto mt-16 xs:mt-40">
               <!-- Exit Btn -->
-              <button class="login-exitBtn absolute -top-9 right-0 xs:top-0 xs:-right-9  size-30 flex items-center justify-center text-white text-3xl lg:text-4xl leading-[0] transition duration-200 hover:opacity-80 rounded-full bg-green-500">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12"></path>
-                </svg>                  
+              <button
+                class="login-exitBtn absolute -top-9 right-0 xs:top-0 xs:-right-9 transition duration-300 hover:text-brand-green-400 text-white">
+                <svg width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M14.625 13.9564C15.0625 14.5213 15.0625 15.0862 14.625 15.6511C14.0938 16.1163 13.5625 16.1163 13.0313 15.6511L7.5 9.71963L1.92188 15.6511C1.39062 16.1163 0.859375 16.1163 0.328125 15.6511C-0.109375 15.0862 -0.109375 14.5213 0.328125 13.9564L5.90625 8.02492L0.328125 2.04361C-0.109375 1.47871 -0.109375 0.913811 0.328125 0.34891C0.859375 -0.116303 1.39062 -0.116303 1.92188 0.34891L7.5 6.33022L13.0781 0.398754C13.6094 -0.066459 14.1406 -0.066459 14.6719 0.398754C15.1094 0.963655 15.1094 1.52856 14.6719 2.09346L9.09375 8.02492L14.625 13.9564Z"
+                    fill="currentColor" />
+                </svg>
               </button>
               <!-- Login Form -->
               <div class="login fade-in bg-white rounded-md p-4 md:p-5">
