--- a/public/index.html
+++ b/public/index.html
@@ -980,7 +980,7 @@
           <!-- Product Modal  -->
           <div class="product-modal hidden fixed inset-0 z-30 w-full min-h-screen overflow-y-auto bg-[#020202]/20">
             <div
-              class="fade-in product-modal__content fade-in relative w-full max-w-[45.0625rem] h-full bg-white rounded-md pr-2 md:pr-8 lg:pr-42 p-4 md:py-7 lg:py-10 px-4 md:px-8 lg:px-42 mt-16 xs:mt-0 ml-auto">
+              class="fade-in product-modal__content fade-in relative w-full max-w-[45.0625rem] min-h-full bg-white rounded-md pr-2 md:pr-8 lg:pr-42 p-4 md:py-7 lg:py-10 px-4 md:px-8 lg:px-42 mt-16 xs:mt-0 ml-auto">
               <div class="flex items-center justify-between gap-5">
                 <h3>Товары в корзине</h3>
                 <!-- Exit Btn -->
@@ -1431,7 +1431,7 @@
                   <div class="text-center text-15 border-t mt-5 pt-2 pb-0.5">
                     <a class="text-brand-dark transition duration-200 hover:opacity-80" href="#">У вас нет
                       аккаунта?</a><br>
-                    <button class="text-brand-green-400 transition duration-200 hover:opacity-80">Войти</a>
+                    <button class="login-btn text-brand-green-400 transition duration-200 hover:opacity-80">Войти</a>
                   </div>
                   </form>
                 </div>
