--- a/public/index.html
+++ b/public/index.html
@@ -1431,7 +1431,7 @@
                   <div class="text-center text-15 border-t mt-5 pt-2 pb-0.5">
                     <a class="text-brand-dark transition duration-200 hover:opacity-80" href="#">У вас нет
                       аккаунта?</a><br>
-                    <button class="login-btn text-brand-green-400 transition duration-200 hover:opacity-80">Войти</a>
+                    <button class="login-btnMobile text-brand-green-400 transition duration-200 hover:opacity-80">Войти</a>
                   </div>
                   </form>
                 </div>
