--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
                       </svg>
                     </button>
                   </div>
-                  <div class="modal-content hidden fade-in w-full h-full max-h-screen min-h-screen md:min-h-max card-scroll overflow-y-auto mt-4 md:mt-5 -mr-4 xs:-mr-2 pr-2">
+                  <div class="modal-content hidden fade-in w-full h-full min-h-full card-scroll overflow-y-auto mt-4 md:mt-5 -mr-4 xs:-mr-2 pr-2">
                     <!-- Search Result Text -->
                     <div class="fade-in options-result hidden space-y-2 mb-4">
                       <!-- 1 -->
@@ -193,7 +193,7 @@
                       <!-- Carts Destktop -->
                       <div class="hidden md:grid grid-cols-2 gap-y-8 gap-x-5 lg:gap-x-30 mt-4">
                         <!-- Card 1 -->
-                        <a href="#" class="flex gap-2.5">
+                        <a href="./product.html" class="flex gap-2.5">
                           <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                           <div>
                             <div class="flex gap-1">
@@ -220,7 +220,7 @@
                           </div>
                         </a>
                         <!-- Card 2 -->
-                        <a href="#" class="flex gap-2.5">
+                        <a href="./product.html" class="flex gap-2.5">
                           <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                           <div>
                             <div class="flex gap-1">
@@ -247,7 +247,7 @@
                           </div>
                         </a>
                         <!-- Card 3 -->
-                        <a href="#" class="flex gap-2.5">
+                        <a href="./product.html" class="flex gap-2.5">
                           <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                           <div>
                             <div class="flex gap-1">
@@ -274,7 +274,7 @@
                           </div>
                         </a>
                         <!-- Card 4 -->
-                        <a href="#" class="flex gap-2.5">
+                        <a href="./product.html" class="flex gap-2.5">
                           <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                           <div>
                             <div class="flex gap-1">
@@ -301,7 +301,7 @@
                           </div>
                         </a>
                         <!-- Card 5 -->
-                        <a href="#" class="flex gap-2.5">
+                        <a href="./product.html" class="flex gap-2.5">
                           <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                           <div>
                             <div class="flex gap-1">
@@ -328,7 +328,7 @@
                           </div>
                         </a>
                         <!-- Card 6 -->
-                        <a href="#" class="flex gap-2.5">
+                        <a href="./product.html" class="flex gap-2.5">
                           <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                           <div>
                             <div class="flex gap-1">
@@ -355,7 +355,7 @@
                           </div>
                         </a>
                         <!-- Card 7 -->
-                        <a href="#" class="flex gap-2.5">
+                        <a href="./product.html" class="flex gap-2.5">
                           <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                           <div>
                             <div class="flex gap-1">
@@ -382,7 +382,7 @@
                           </div>
                         </a>
                         <!-- Card 8 -->
-                        <a href="#" class="flex gap-2.5">
+                        <a href="./product.html" class="flex gap-2.5">
                           <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                           <div>
                             <div class="flex gap-1">
@@ -412,7 +412,7 @@
                       <!-- Carts Mobile -->
                       <div class="md:hidden grid grid-cols-2 gap-x-4 gap-y-5 lg:gap-30 mt-4 lg:mt-6">
                         <!-- Cart 1 -->
-                        <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                        <a href="./product.html" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                           <div class="flex justify-between gap-5">
                             <button
                               class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -462,7 +462,7 @@
                           </div>
                         </a>
                         <!-- Cart 2 -->
-                        <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                        <a href="./product.html" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                           <div class="flex justify-between gap-5">
                             <button
                               class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -512,7 +512,7 @@
                           </div>
                         </a>
                         <!-- Cart 3 -->
-                        <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                        <a href="./product.html" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                           <div class="flex justify-between gap-5">
                             <button
                               class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -562,7 +562,7 @@
                           </div>
                         </a>
                         <!-- Cart 4 -->
-                        <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                        <a href="./product.html" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                           <div class="flex justify-between gap-5">
                             <button
                               class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -612,7 +612,7 @@
                           </div>
                         </a>
                         <!-- Cart 5 -->
-                        <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                        <a href="./product.html" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                           <div class="flex justify-between gap-5">
                             <button
                               class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -662,7 +662,7 @@
                           </div>
                         </a>
                         <!-- Cart 6 -->
-                        <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                        <a href="./product.html" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                           <div class="flex justify-between gap-5">
                             <button
                               class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -712,7 +712,7 @@
                           </div>
                         </a>
                         <!-- Cart 7 -->
-                        <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                        <a href="./product.html" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                           <div class="flex justify-between gap-5">
                             <button
                               class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -762,7 +762,7 @@
                           </div>
                         </a>
                         <!-- Cart 8 -->
-                        <a href="#" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
+                        <a href="./product.html" class="border bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                           <div class="flex justify-between gap-5">
                             <button
                               class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -844,7 +844,7 @@
             </button>
             <!-- Login -->
             <button
-              class="login-btn flex flex-col gap-2.5 items-center text-brand-black-400 transition duration-200 hover:text-brand-green-400">
+              class="login-btnMobile flex flex-col gap-2.5 items-center text-brand-black-400 transition duration-200 hover:text-brand-green-400">
               <svg width="22" height="24" viewBox="0 0 22 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M14.75 6C14.7188 4.59375 14.0938 3.51562 12.875 2.76562C11.625 2.07812 10.375 2.07812 9.125 2.76562C7.90625 3.51562 7.28125 4.59375 7.25 6C7.28125 7.40625 7.90625 8.48438 9.125 9.23438C10.375 9.92188 11.625 9.92188 12.875 9.23438C14.0938 8.48438 14.7188 7.40625 14.75 6ZM5 6C5 4.90625 5.26562 3.90625 5.79688 3C6.32812 2.09375 7.0625 1.35938 8 0.796875C8.9375 0.265625 9.9375 0 11 0C12.0625 0 13.0625 0.265625 14 0.796875C14.9375 1.35938 15.6719 2.09375 16.2031 3C16.7344 3.90625 17 4.90625 17 6C17 7.09375 16.7344 8.09375 16.2031 9C15.6719 9.90625 14.9375 10.6406 14 11.2031C13.0625 11.7344 12.0625 12 11 12C9.9375 12 8.9375 11.7344 8 11.2031C7.0625 10.6406 6.32812 9.90625 5.79688 9C5.26562 8.09375 5 7.09375 5 6ZM2.79688 21.75H19.2031C18.9531 20.2188 18.2812 18.9688 17.1875 18C16.0625 17.0312 14.7188 16.5312 13.1562 16.5H8.84375C7.28125 16.5312 5.95312 17.0312 4.85938 18C3.73438 18.9688 3.04688 20.2188 2.79688 21.75ZM0.5 22.5938C0.5625 20.25 1.375 18.2812 2.9375 16.6875C4.53125 15.125 6.5 14.3125 8.84375 14.25H13.1562C15.5 14.3125 17.4688 15.125 19.0625 16.6875C20.625 18.2812 21.4375 20.25 21.5 22.5938C21.5 23 21.3594 23.3281 21.0781 23.5781C20.8281 23.8594 20.5 24 20.0938 24H1.90625C1.5 24 1.17188 23.8594 0.921875 23.5781C0.640625 23.3281 0.5 23 0.5 22.5938Z"
@@ -854,7 +854,7 @@
             </button>
             <!-- Korzinka -->
             <button
-              class="product-modalBtn flex flex-col gap-2.5 items-center text-brand-black-400 transition duration-200 hover:text-brand-green-400"
+              class="product-modalBtnMobile flex flex-col gap-2.5 items-center text-brand-black-400 transition duration-200 hover:text-brand-green-400"
               href="#">
               <svg width="27" height="25" viewBox="0 0 27 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
