--- a/public/index.html
+++ b/public/index.html
@@ -1283,10 +1283,10 @@
 
           <!-- Login -->
           <div class="login-modal hidden fixed inset-0 z-30 w-full min-h-full overflow-y-auto bg-[#020202]/20 p-4">
-            <div class="login-container w-full max-w-350 relative mx-auto mt-16 xs:mt-40">
+            <div class="login-container w-full xs:max-w-350 relative mx-auto mt-12 xs:mt-14 lg:mt-40">
               <!-- Exit Btn -->
               <button
-                class="login-exitBtn absolute -top-9 right-0 xs:top-0 xs:-right-9 transition duration-300 hover:text-brand-green-400 text-white">
+                class="login-exitBtn absolute -top-9 right-5 xs:top-0 xs:-right-9 transition duration-300 hover:text-brand-green-400 text-white">
                 <svg width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M14.625 13.9564C15.0625 14.5213 15.0625 15.0862 14.625 15.6511C14.0938 16.1163 13.5625 16.1163 13.0313 15.6511L7.5 9.71963L1.92188 15.6511C1.39062 16.1163 0.859375 16.1163 0.328125 15.6511C-0.109375 15.0862 -0.109375 14.5213 0.328125 13.9564L5.90625 8.02492L0.328125 2.04361C-0.109375 1.47871 -0.109375 0.913811 0.328125 0.34891C0.859375 -0.116303 1.39062 -0.116303 1.92188 0.34891L7.5 6.33022L13.0781 0.398754C13.6094 -0.066459 14.1406 -0.066459 14.6719 0.398754C15.1094 0.963655 15.1094 1.52856 14.6719 2.09346L9.09375 8.02492L14.625 13.9564Z"
