--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
                       </svg>
                     </button>
                   </div>
-                  <div class="modal-content hidden fade-in w-full h-full min-h-full card-scroll overflow-y-auto mt-4 md:mt-5 -mr-4 xs:-mr-2 pr-2">
+                  <div class="modal-content hidden fade-in w-full h-[calc(100vh-9.5rem)] card-scroll overflow-y-auto mt-4 md:mt-5 -mr-4 md:-mr-2 pr-2">
                     <!-- Search Result Text -->
                     <div class="fade-in options-result hidden space-y-2 mb-4">
                       <!-- 1 -->
@@ -914,8 +914,7 @@
             </div>
           </div>
           <!-- Mobile Menu -->
-          <div
-            class="mobile-menu hidden lg:hidden fixed inset-0 z-20 w-full min-h-screen overflow-y-auto bg-[#020202]/20 px-4">
+          <div class="mobile-menu hidden lg:hidden fixed inset-0 z-20 w-full min-h-screen overflow-y-auto bg-[#020202]/20 px-4">
             <div class="fade-in mobile-menu__content max-w-[35.25rem] bg-white rounded-md p-5 mx-auto mt-16 md:mt-20">
               <h5 class="font-semibold text-xl">Меню</h5>
               <!--  links  -->
