--- a/public/index.html
+++ b/public/index.html
@@ -193,7 +193,7 @@
                       <!-- Carts Destktop -->
                       <div class="hidden md:grid grid-cols-2 gap-y-8 gap-x-5 lg:gap-x-30 mt-4">
                         <!-- Card 1 -->
-                        <a href="#" class="flex gap-2.5">
+                        <a href="./product.html" class="flex gap-2.5">
                           <img class="size-14" src="./img/image-product__1.png" alt="image-product__1">
                           <div>
                             <div class="flex gap-1">
@@ -1588,6 +1588,7 @@
             </div>
           </div>
         </div>
+      </div>
     </nav>
   </header>
 
