--- a/public/catalog.html
+++ b/public/catalog.html
@@ -2235,7 +2235,7 @@
           </div>
           <!-- Filters -->
           <div
-            class="filters hidden lg:block lg:max-w-[15.9375rem] w-full fixed lg:static inset-0 z-10 bg-[#020202]/20 lg:bg-transparent overflow-y-auto">
+            class="filters hidden lg:block lg:max-w-[15.9375rem] w-full fixed lg:static inset-0 z-[20] bg-[#020202]/20 lg:bg-transparent overflow-y-auto">
             <div
               class="fade-left filter-content block max-w-80 w-full min-h-screen lg:min-h-max bg-white text-[#2E2E2E] lg:rounded-md px-4 pt-4 pb-4 lg:pb-6">
               <div class="lg:hidden flex items-center justify-between">
