--- a/public/index.html
+++ b/public/index.html
@@ -956,7 +956,7 @@
                 </a>
                 <a class="text-left text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl"
                   href="./delivery.html">
-                  Доставки
+                  Заказы
                 </a>
                 <a href="./basket.html"
                   class="product-modalBtn text-left text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl">
