--- a/public/news.html
+++ b/public/news.html
@@ -832,7 +832,7 @@
                   d="M16.5312 2.75H12.125V6.5H18.6875L17.2344 3.21875C17.0781 2.90625 16.8438 2.75 16.5312 2.75ZM19.25 8.75H2.75V18.5C2.78125 18.9688 3.03125 19.2188 3.5 19.25H18.5C18.9688 19.2188 19.2188 18.9688 19.25 18.5V8.75ZM3.3125 6.5H9.875V2.75H5.46875C5.125 2.75 4.89062 2.90625 4.76562 3.21875L3.3125 6.5ZM16.5312 0.5C17.8125 0.5625 18.7344 1.15625 19.2969 2.28125L21.2656 6.6875C21.4219 7.0625 21.5 7.46875 21.5 7.90625V18.5C21.4688 19.3438 21.1719 20.0469 20.6094 20.6094C20.0469 21.1719 19.3438 21.4688 18.5 21.5H3.5C2.65625 21.4688 1.95312 21.1719 1.39062 20.6094C0.828125 20.0469 0.53125 19.3438 0.5 18.5V7.90625C0.5 7.46875 0.59375 7.0625 0.78125 6.6875L2.70312 2.28125C3.26562 1.15625 4.1875 0.5625 5.46875 0.5H16.5312Z"
                   fill="currentColor" />
               </svg>
-              <span class="text-13">Доставки</span>
+              <span class="text-13">Заказы</span>
             </a>
             <!-- Fav -->
             <button
@@ -956,7 +956,7 @@
                 </a>
                 <a class="text-left text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl"
                   href="./delivery.html">
-                  Доставки
+                  Заказы
                 </a>
                 <a href="./basket.html"
                   class="product-modalBtn text-left text-brand-black-400 transition duration-200 hover:text-brand-green-400 text-2xl">
