--- a/public/reviews.html
+++ b/public/reviews.html
@@ -2085,9 +2085,9 @@
         <!-- Previous -->
         <button
           class="w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">Previous</button>
-        <button class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">1</button>
-        <button class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">2</button>
-        <button class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">3</button>
+        <a href="#" class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">1</a>
+        <a href="#" class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">2</a>
+        <a href="#" class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">3</a>
         <!-- Next btn -->
         <button class="w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-l px-2.5 py-1">Next</button>
       </div>
