--- a/public/product.html
+++ b/public/product.html
@@ -1617,22 +1617,24 @@
                 <img class="large-image hidden size-full object-cover" src="./img/image-product__2.png" alt="Product 2">
                 <img class="large-image hidden size-full object-cover" src="./img/image-product__1.png" alt="Product 2">
               </div>
-              <div class="flex xs:flex-col lg:flex-row justify-center gap-2.5 mt-4 xs:mt-0 lg:mt-12">
-                <div
-                  class="cursor-pointer thumbnail size-12 md:size-sixty border border-transparent transition duration-200 hover:border-brand-black-200 rounded-md p-1">
-                  <img class="size-full" src="./img/icon-product__2.svg" alt="icon-product__2">
-                </div>
-                <div
-                  class="cursor-pointer thumbnail size-12 md:size-sixty border border-transparent transition duration-200 hover:border-brand-black-200 rounded-md p-1">
-                  <img class="size-full" src="./img/image-product__1.png" alt="icon-product__2">
-                </div>
-                <div
-                  class="cursor-pointer thumbnail size-12 md:size-sixty border border-transparent transition duration-200 hover:border-brand-black-200 rounded-md p-1">
-                  <img class="size-full" src="./img/icon-product__2.svg" alt="icon-product__2">
-                </div>
-                <div
-                  class="cursor-pointer thumbnail size-12 md:size-sixty border border-transparent transition duration-200 hover:border-brand-black-200 rounded-md p-1">
-                  <img class="size-full" src="./img/image-product__1.png" alt="icon-product__2">
+              <div class="overflow-x-auto no-scroll">
+                <div class="flex xs:flex-col lg:flex-row justify-center gap-2.5 mt-4 xs:mt-0 lg:mt-12">
+                  <div
+                    class="shrink-0 cursor-pointer thumbnail size-12 md:size-sixty border border-transparent transition duration-200 hover:border-brand-black-200 rounded-md p-1">
+                    <img class="size-full" src="./img/icon-product__2.svg" alt="icon-product__2">
+                  </div>
+                  <div
+                    class="shrink-0 cursor-pointer thumbnail size-12 md:size-sixty border border-transparent transition duration-200 hover:border-brand-black-200 rounded-md p-1">
+                    <img class="size-full" src="./img/image-product__1.png" alt="icon-product__2">
+                  </div>
+                  <div
+                    class="shrink-0 cursor-pointer thumbnail size-12 md:size-sixty border border-transparent transition duration-200 hover:border-brand-black-200 rounded-md p-1">
+                    <img class="size-full" src="./img/icon-product__2.svg" alt="icon-product__2">
+                  </div>
+                  <div
+                    class="shrink-0 cursor-pointer thumbnail size-12 md:size-sixty border border-transparent transition duration-200 hover:border-brand-black-200 rounded-md p-1">
+                    <img class="size-full" src="./img/image-product__1.png" alt="icon-product__2">
+                  </div>
                 </div>
               </div>
             </div>
